# fredo1_firmware

./: README.md  compile.sh  install.md  install.sh  lala.ino  launch.sh  temp.ino  upload.sh
fo1/: fo1.ino
fo1_serial/: CMakeLists.txt
fo1_serial/include/: com_util.h  fredo.h  fredo_msg.h
fo1_serial/src/: com_util.cpp  ctrl_test.cpp  serial_com.cpp  serial_link.cpp  serial_test.cpp
serial_link/: CMakeLists.txt
serial_link/src/: serial_link.cpp
test/: test.ino
trial/: lala.ino  temp.ino
